# agent-supervisor

./: .gitignore  ARCHITECTURE.md  AUTO_POLLING_INTERVAL.md  AgentSupervisor.Debug.props  AgentSupervisor.csproj  CI_DATA_COLLECTION.md  CI_DATA_POLLING.md  CMakeLists.txt  DEV_DATA_COLLECTION.md  DEV_DATA_POLLING.md  GitHubCopilotAgentBot.csproj  LICENSE  README.md  README.zh-CN.md  VERSIONING.md  app.manifest  config.json.example
.github/: copilot-instructions.md
.github/agents/: semantic-commit-agent.md
.github/workflows/: build.yml  code-simplifier.lock.yml  duplicate-code-detector.lock.yml  duplicate-code-detector.md  release.yml
Resources/: Strings.Designer.cs  Strings.resx  Strings.zh-CN.resx
src/: AboutForm.cs  Configuration.cs  Constants.cs  CrashDumpHandler.cs  GitHubService.cs  IReviewRequestObserver.cs  IconLoader.cs  JsonFileHelper.cs  JsonFilePersistence.cs  JsonFileStore.cs  JsonPersistence.cs  Localization.cs  Logger.cs  MainWindow.cs  NotificationHistory.cs  NotificationService.cs  Program.cs  ReviewRequestHistory.cs  ReviewRequestService.cs  ReviewRequestsForm.cs  SettingsForm.cs  SystemTrayManager.cs  TaskbarBadgeManager.cs  UpdateService.cs
src/Models/: NotificationEntry.cs  PullRequestReview.cs  RateLimitInfo.cs  ReleaseInfo.cs  ReviewRequestEntry.cs
src/Resources/: Strings.resx  Strings.zh-CN.resx
